Cluster_Setup-15%/config/ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mycas-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - mycas.com
    secretName: mycas-tls  # This should match the secret name created earlier
  rules:
  - host: mycas.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
